--- a/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
+++ b/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
@@ -17,6 +17,7 @@
 # dbPass - Database password for MySQL. #
 # dbName - Database name for MySQL. #
 # dbPrefix - Database table prefix. #
+# AnnouncementDelay - Delay in second to repeat the message #
 settings {
     onlineonly=true
 	broadcastoffline=false
@@ -35,10 +36,8 @@ settings {
 	dbPrefix=""
 	dbTableTotal="ListenerTotal"
 	dbTableQueue="ListenerQueue"
-	
-	
-	
-	
+	AnnouncementDelay=300
+		
 }
 
 # services section (DEFAULT is used if service doesn't exist) #
@@ -104,6 +103,12 @@ joinmessage=[
     "<GOLD>-----------------------------------------------------",
     "<AQUA>You currently have <GREEN><votes> Votes"
     ]
+
+Announcement=[
+	"<GOLD>-----------------------------------------------------",
+    "Vote for us every day for in game rewards and extras",
+    "<GOLD>-----------------------------------------------------"
+]
 
 # Additional formatting codes for below:  #
 # <TOTAL> = vote total - used for /rewards #
