--- a/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
+++ b/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
@@ -26,7 +26,7 @@ settings {
 	votetopnumber=10
 	AddExtraReward=false
 	GiveChanceReward=true
-	dbMode="MySQL"
+	dbMode="File"
 	dbFile="SQL.db"
 	dbHost=""
 	dbPort=3306
