--- a/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
+++ b/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
@@ -1,23 +1,25 @@
-# AurionsVoteListener #
-# http://www.mineaurion.com #
+# AurionsVoteListener 
+# http://www.mineaurion.com 
 # settings section
-# onlineonly - Only delivers rewards when the player is online.  If they are offline it will wait and deliver when they next join the server"!" #
-# broadcastoffline - Show broadcast message for offline queued votes. #
-# votecommand - Enables the /vote command which will show the message contained in the votemessage section at the bottom of the config. #
-# joinmessage - Show the message contained in the joinmessage section at the bottom of this config when a player joins the server. #
-# votetopnumber - Number of players to display for the topvote #
+# onlineonly - Only delivers rewards when the player is online.  If they are offline it will wait and deliver when they next join the server"!" 
+# broadcastoffline - Show broadcast message for offline queued votes. 
+# votecommand - Enables the /vote command which will show the message contained in the votemessage section at the bottom of the config. 
+# joinmessage - Show the message contained in the joinmessage section at the bottom of this config when a player joins the server. 
+# votetopnumber - Number of players to display for the topvote 
 # AddExtraRandom: true (give extra random reward) Depending on the chance
 # GiveChanceReward: Gives all rewards of lower numbers
-# dbMode - Use "MySQL" or "File" #
-# dbFile - name of the database file (don't forget the .db) #
-# setup MySQL #
-# dbHost - Database IP / Hostname for MySQL. #
-# dbPort - Database port for MySQL. #
-# dbUser - Database username for MySQL. #
-# dbPass - Database password for MySQL. #
-# dbName - Database name for MySQL. #
-# dbPrefix - Database table prefix. #
-# AnnouncementDelay - Delay in second to repeat the message #
+# dbMode - Use "MySQL" or "File" 
+# dbFile - name of the database file (don't forget the .db) 
+# setup MySQL 
+# dbHost - Database IP / Hostname for MySQL. 
+# dbPort - Database port for MySQL. 
+# dbUser - Database username for MySQL. 
+# dbPass - Database password for MySQL. 
+# dbName - Database name for MySQL. 
+# dbPrefix - Database table prefix. 
+# AnnouncementDelay - Delay in second to repeat the message 
+
+Version = 3
 settings {
     onlineonly=true
 	broadcastoffline=false
@@ -40,9 +42,9 @@ settings {
 		
 }
 
-# services section (DEFAULT is used if service doesn't exist) #
-# The example below would give 5 diamonds per vote. #
-# Never remove DEFAULT #
+# services section (DEFAULT is used if service doesn't exist) 
+# The example below would give 5 diamonds per vote. 
+# Never remove DEFAULT 
 services {
 	DEFAULT{
 	broadcast="<GREEN><username> <GOLD>has voted @ <GREEN><service> <GOLD>and received <GREEN>5 Diamonds !"
@@ -80,16 +82,16 @@ ExtraReward{
 }
 
 
-# Available formatting codes for messages: #
-# <service> = service name #
-# <username>= player username #
-# <votes> = current vote total #
-# & = Colour Symbol to enter manual colours / control codes #
-# <AQUA> <BLACK> <BLUE> <DARK_AQUA> <DARK_BLUE> #
-# <DARK_GRAY> <DARK_GREEN> <DARK_PURPLE> <DARK_RED> <GOLD> #
-# <GRAY> <GREEN> <LIGHT_PURPLE> <RED> <WHITE> <YELLOW> <BOLD> #
-# <ITALIC> <UNDERLINE> <STRIKETHROUGH> <STRIKE> #
-# <STRIKETHROUGH> <MAGIC> <RESET> #
+# Available formatting codes for messages: 
+# <service> = service name 
+# <username>= player username 
+# <votes> = current vote total 
+# & = Colour Symbol to enter manual colours / control codes 
+# <AQUA> <BLACK> <BLUE> <DARK_AQUA> <DARK_BLUE> 
+# <DARK_GRAY> <DARK_GREEN> <DARK_PURPLE> <DARK_RED> <GOLD> 
+# <GRAY> <GREEN> <LIGHT_PURPLE> <RED> <WHITE> <YELLOW> <BOLD> 
+# <ITALIC> <UNDERLINE> <STRIKETHROUGH> <STRIKE> 
+# <STRIKETHROUGH> <MAGIC> <RESET> 
 votemessage=[
     "<GOLD>-----------------------------------------------------",
     "Vote for us every day for in game rewards and extras",
@@ -110,10 +112,10 @@ Announcement=[
     "<GOLD>-----------------------------------------------------"
 ]
 
-# Additional formatting codes for below:  #
-# <TOTAL> = vote total - used for /rewards #
-# <POSITION> = current rank - used for /votetop #
-# <username> = player name - used for /votetop #
+# Additional formatting codes for below:  
+# <TOTAL> = vote total - used for /rewards 
+# <POSITION> = current rank - used for /votetop 
+# <username> = player name - used for /votetop 
 votetopformat="<POSITION>. <GREEN><username> - <WHITE><TOTAL>"
 
 votetopheader=[
