--- a/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
+++ b/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
@@ -18,8 +18,10 @@
 # dbName - Database name for MySQL. 
 # dbPrefix - Database table prefix. 
 # AnnouncementDelay - Delay in second to repeat the message 
+# Enables cumulative voting
 
-Version = 3
+
+Version = 6
 settings {
     onlineonly=true
 	broadcastoffline=false
@@ -39,8 +41,13 @@ settings {
 	dbTableTotal="ListenerTotal"
 	dbTableQueue="ListenerQueue"
 	AnnouncementDelay=300
+	cumulativevoting=false
 		
 }
+
+
+
+
 
 # services section (DEFAULT is used if service doesn't exist) 
 # The example below would give 5 diamonds per vote. 
@@ -63,6 +70,9 @@ services {
 	}
 }
 
+
+
+
 #  The example below would give a 30% chance of a voter receiving an extra 5 book, and a 10% chance of an extra 5 book and 5 ghast tear.
 ExtraReward{
 	30{
@@ -82,6 +92,8 @@ ExtraReward{
 }
 
 
+
+
 # Available formatting codes for messages: 
 # <service> = service name 
 # <username>= player username 
@@ -99,18 +111,22 @@ votemessage=[
     "<AQUA>You currently have <GREEN><votes> Votes"
     ]
     
+	
 joinmessage=[
     "<GOLD>-----------------------------------------------------",
     "Vote for us every day for in game rewards and extras",
     "<GOLD>-----------------------------------------------------",
     "<AQUA>You currently have <GREEN><votes> Votes"
     ]
-
+	
+	
 Announcement=[
 	"<GOLD>-----------------------------------------------------",
     "Vote for us every day for in game rewards and extras",
     "<GOLD>-----------------------------------------------------"
 ]
+
+
 
 # Additional formatting codes for below:  
 # <TOTAL> = vote total - used for /rewards 
@@ -122,3 +138,23 @@ votetopheader=[
     "<GOLD>---------------- <WHITE>( <DARK_AQUA>Top Voters<WHITE> ) <GOLD>----------------"
     ]
 
+
+
+	
+#  The example below would give an extra 5 book when the player was voted 30 times, and an extra 5 book and 5 ghast tear when the player was voted 10 times.
+cumulativevoting{
+	30{
+		broadcast="<GREEN><username> <GOLD>was vote 30 times and received an <GREEN>extra 5 book"
+		playermessage="<GREEN>You were super lucky and received an <GREEN> extra 5 book "
+		commands=[
+			"give <username> book 5"
+		]
+	}
+	10{
+		broadcast="<GREEN><username> <GOLD>was vote 10 times and received an <GREEN>extra 5 ghast tear"
+		playermessage="<GREEN>You were lucky and received an extra 5 book"
+		commands=[
+			"give <username> ghast tear 5"
+		]
+	}
+}
