--- a/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
+++ b/src/main/resources/assets/aurionsvotelistener/aurionsvotelistener.conf
@@ -6,7 +6,7 @@
 # votecommand - Enables the /vote command which will show the message contained in the votemessage section at the bottom of the config. 
 # joinmessage - Show the message contained in the joinmessage section at the bottom of this config when a player joins the server. 
 # votetopnumber - Number of players to display for the topvote 
-# AddExtraRandom: true (give extra random reward) Depending on the chance
+# AddExtraReward: true (give extra random reward) Depending on the chance
 # GiveChanceReward: Gives all rewards of lower numbers
 # dbMode - Use "MySQL" or "File" 
 # dbFile - name of the database file (don't forget the .db) 
@@ -21,7 +21,7 @@
 # Enables cumulative voting
 
 
-Version = 6
+Version = 7
 settings {
     onlineonly=true
 	broadcastoffline=false
@@ -70,6 +70,14 @@ services {
 	}
 }
 
+# Section for config message when the player has voted several times offline
+#<amt> = total offline vote
+#<service> is not usable
+Offline{
+	broadcast="<GREEN><player> voted <amt> times while they were offline and received rewards!"
+	playermessage="<GREEN>Thanks for voting !"
+}
+
 
 
 
@@ -90,6 +98,8 @@ ExtraReward{
 		]
 	}
 }
+
+
 
 
 
