--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 deploy:
   provider: releases
   api_key: "$GH_TOKEN"
-  file: "$HOME/build/libs/*"
+  file: "build/libs/*"
   skip_cleanup: true
   on:
    tags: true
