--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: java
 deploy:
   provider: releases
   api_key: "$GH_TOKEN"
+  file_glob: true
   file: "build/libs/*"
   skip_cleanup: true
   on:
+   repo: Mineaurion/AurionVoteListener
    tags: true
