--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
 language: java
-deploy:
-  provider: releases
-  api_key: "$GH_TOKEN"
-  file_glob: true
-  file: "build/libs/*"
-  skip_cleanup: true
-  on:
-   repo: Mineaurion/AurionVoteListener
-   tags: true
+#deploy:
+#  provider: releases
+#  api_key: "$GH_TOKEN"
+#  file_glob: true
+#  file: "build/libs/*"
+#  skip_cleanup: true
+#  on:
+#   repo: Mineaurion/AurionVoteListener
+#   tags: true
