--- a/sponge7/build.gradle
+++ b/sponge7/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.spongepowered.plugin' version '0.8.1'
+    id "net.kyori.blossom" version "1.1.0"
 }
 
 repositories {
@@ -13,6 +14,10 @@ dependencies {
     compile project(':common')
     compile 'org.spongepowered:spongeapi:7.1.0'
     compileOnly "com.vexsoftware:nuvotifier-universal:2.4.1"
+}
+
+blossom {
+    replaceToken '@version@', project.version
 }
 
 sponge.plugin.id = pluginId
