--- a/sponge5/build.gradle
+++ b/sponge5/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'org.spongepowered.plugin' version '0.8.1'
+    id "net.kyori.blossom" version "1.1.0"
 }
 
 repositories {
     maven {
         name = "Nuvotifier"
         url  = 'https://repo.parallelblock.com/repository/maven-public/'
+
     }
 }
 
@@ -13,6 +15,10 @@ dependencies {
     compile project(':common')
     compile 'org.spongepowered:spongeapi:5.1.0'
     compileOnly "com.vexsoftware:nuvotifier-universal:2.4.1"
+}
+
+blossom {
+    replaceToken '@version@', project.version
 }
 
 sponge.plugin.id = pluginId
