--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'aurionvotelistener'
 
-include 'common', 'spigot', 'sponge5', 'sponge7'
+include 'common',
+        'spigot',
+        'sponge'
