Config modifcation and add version check

--- a/sponge/src/main/java/resources/assets/aurionsvotelistener/config.conf
+++ b/sponge/src/main/java/resources/assets/aurionsvotelistener/config.conf
@@ -20,8 +20,7 @@
 # AnnouncementDelay - Delay in second to repeat the message 
 # Enables cumulative voting
 
-
-version = 9
+version = 10
 
 database{
   storage="sqlite"
@@ -36,15 +35,44 @@ database{
   tableQueue="ListenerQueue"
 }
 
-
 settings {
-	voteCommand=true
-	joinMessage=true
 	addExtraReward=false
 	giveChanceReward=true
 	cumulativeVoting=false
-	voteTopNumber=10
-	announcementDelay=300
+}
+
+# Available formatting codes for messages:
+# <service> = service name
+# <username>= player username
+# <votes> = current vote total
+# & = Colour Symbol to enter manual colours / control codes
+vote{
+    command=true
+    message=[
+        "&6-----------------------------------------------------",
+        "Vote for us every day for in game rewards and extras",
+        "&6-----------------------------------------------------",
+        "&bYou currently have &a<votes> Votes"
+    ]
+}
+
+join{
+    enable=true
+    message=[
+        "&6-----------------------------------------------------",
+        "Vote for us every day for in game rewards and extras",
+        "&6-----------------------------------------------------",
+        "&bYou currently have &2<votes> Votes"
+    ]
+}
+
+announcement{
+    delay=300
+    message=[
+        "&6-----------------------------------------------------",
+        "Vote for us every day for in game rewards and extras",
+        "&6-----------------------------------------------------"
+    ]
 }
 
 # Section for config message when the player has voted several times offline
@@ -56,37 +84,12 @@ offline{
 	playermessage="&aThanks for voting !"
 }
 
-# Available formatting codes for messages: 
-# <service> = service name 
-# <username>= player username 
-# <votes> = current vote total 
-# & = Colour Symbol to enter manual colours / control codes 
-
-votemessage=[
-    "&6-----------------------------------------------------",
-    "Vote for us every day for in game rewards and extras",
-    "&6-----------------------------------------------------",
-    "&bYou currently have &a<votes> Votes"
-    ]  
-joinmessage=[
-    "&6-----------------------------------------------------",
-    "Vote for us every day for in game rewards and extras",
-    "&6-----------------------------------------------------",
-    "&bYou currently have &2<votes> Votes"
-    ]	
-announcement=[
-	"&6-----------------------------------------------------",
-    "Vote for us every day for in game rewards and extras",
-    "&6-----------------------------------------------------"
-]
-
-
-
-# Additional formatting codes for below:  
+# Additional formatting codes for below:
 # <TOTAL> = vote total - used for /rewards 
 # <POSITION> = current rank - used for /votetop 
 # <username> = player name - used for /votetop
 voteTop{
+    number=10
     format="<POSITION>. &a<username> - &f<TOTAL>"
     header=[
     "&6---------------- &f( &3Top Voters&f ) &6----------------"
