Fix fix and fix and couple more...
Fix Confg null
Fix Leak connection
Change random reward to much simplier way
Couple more fix (message, reward, etc...)

--- a/sponge/src/main/resources/assets/aurionvotelistener/advanced-reward.conf
+++ b/sponge/src/main/resources/assets/aurionvotelistener/advanced-reward.conf
@@ -1,15 +1,15 @@
 #  The example below would give a 30% chance of a voter receiving an extra 5 book, and a 10% chance of an extra 5 book and 5 ghast tear.
-ExtraReward{
+extraReward{
 	30{
-		broadcast="<GREEN><username> <GOLD>was super lucky and received an <GREEN>extra 5 book"
-		playermessage="<GREEN>You were super lucky and received an <GREEN> extra 5 book "
+		broadcast="&a<username> &6was super lucky and received an &aextra 5 book"
+		playermessage="&aYou were super lucky and received an &a extra 5 book "
 		commands=[
 			"give <username> book 5"
 		]
 	}
 	10{
-		broadcast="<GREEN><username> <GOLD>was super lucky and received an <GREEN>extra 5 ghast tear"
-		playermessage="<GREEN>You were lucky and received an extra 5 book"
+		broadcast="&a<username> &6was super lucky and received an &aextra 5 ghast tear"
+		playermessage="&aYou were lucky and received an extra 5 book"
 		commands=[
 			"give <username> ghast tear 5"
 		]
@@ -17,17 +17,17 @@ ExtraReward{
 }
 
 #  The example below would give an extra 5 book when the player was voted 30 times, and an extra 5 book and 5 ghast tear when the player was voted 10 times.
-cumulativevoting{
+cumulativeVoting{
 	30{
-		broadcast="<GREEN><username> <GOLD>was vote 30 times and received an <GREEN>extra 5 book"
-		playermessage="<GREEN>You were super lucky and received an <GREEN> extra 5 book "
+		broadcast="&a<username> &6was vote 30 times and received an &aextra 5 book"
+		playermessage="&aYou were super lucky and received an &a extra 5 book "
 		commands=[
 			"give <username> book 5"
 		]
 	}
 	10{
-		broadcast="<GREEN><username> <GOLD>was vote 10 times and received an <GREEN>extra 5 ghast tear"
-		playermessage="<GREEN>You were lucky and received an extra 5 book"
+		broadcast="&a<username> &6was vote 10 times and received an &aextra 5 ghast tear"
+		playermessage="&aYou were lucky and received an extra 5 book"
 		commands=[
 			"give <username> ghast tear 5"
 		]
@@ -36,7 +36,9 @@ cumulativevoting{
 
 # If the player have the permission, they give reward
 perms{
-    "Aurions.example"{
+    "aurion.example"{
+        broadcast="&a<username> &6has perms aurions.example, he received an &aextra 5 book"
+        playermessage="&aYou were lucky you have the perm aurion.example and received an extra 5 book"
         commands=[
 			"give <username> book 5"
 		]
