--- a/sponge/src/main/resources/assets/aurionvotelistener/config.conf
+++ b/sponge/src/main/resources/assets/aurionvotelistener/config.conf
@@ -20,8 +20,6 @@
 # AnnouncementDelay - Delay in second to repeat the message 
 # Enables cumulative voting
 
-version = 10
-
 database{
   storage="sqlite"
   file="sql.db"
@@ -36,9 +34,9 @@ database{
 }
 
 settings {
-	addExtraReward=false
-	giveChanceReward=true
-	cumulativeVoting=false
+	permissionReward=true
+	chanceReward=true
+	cumulativeReward=true
     queueVote=true
 	# Available formatting codes for messages:
     # <service> = service name
