--- a/sponge/src/main/resources/assets/aurionvotelistener/reward.conf
+++ b/sponge/src/main/resources/assets/aurionvotelistener/reward.conf
@@ -3,8 +3,8 @@
 # Never remove DEFAULT 
 services {
 	DEFAULT{
-        broadcast="<GREEN><username> <GOLD>has voted @ <GREEN><service> <GOLD>and received <GREEN>5 Diamonds !"
-        playerMessage="<GREEN>Thanks for voting at <AQUA><service> !"
+        broadcast="&a<username> &6has voted @ &a<service> &6and received &a5 Diamonds !"
+        playerMessage="&aThanks for voting at &b<service> !"
         commands=[
             "give <username> diamonds 5"
          ]
@@ -12,8 +12,8 @@ services {
 	
 	#This Model is for add a new service
 	MC-Index {
-        broadcast="<GREEN><username> <GOLD>has voted @ <GREEN><service> <GOLD>and received <GREEN>5 Diamonds !"
-        playerMessage="<GREEN>Thanks for voting at <AQUA><service> !"
+        broadcast="&a<username> &6has voted @ &a<service> &6and received &a5 Diamonds !"
+        playerMessage="&aThanks for voting at &b<service> !"
         commands=[
             "give <username> diamonds 5"
         ]
