--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -6,14 +6,14 @@ plugins {
 repositories {
     maven {
         name = "Nuvotifier"
-        url  = 'https://repo.parallelblock.com/repository/maven-public/'
+        url  = 'https://dl.bintray.com/nuvotifier/maven/'
     }
 }
 
 dependencies {
     compile project(':common')
     compile 'org.spongepowered:spongeapi:7.1.0'
-    compileOnly "com.vexsoftware:nuvotifier-universal:2.4.1"
+    compileOnly "com.vexsoftware:nuvotifier-universal:2.3.4"
 }
 
 blossom {
