Syntax fix and Update Readme

--- a/sponge/src/main/resources/assets/aurionvotelistener/advanced-reward.conf
+++ b/sponge/src/main/resources/assets/aurionvotelistener/advanced-reward.conf
@@ -1,15 +1,15 @@
-#  The example below would give a 30% chance of a voter receiving an extra 5 book, and a 10% chance of an extra 5 book and 5 ghast tear.
+#  The example below would give a 30% chance of a voter receiving an extra 5 book, and a 10% chance of an extra 5 ghast tear.
 extraReward{
 	30{
 		broadcast="&a<username> &6was super lucky and received an &aextra 5 book"
-		playermessage="&aYou were super lucky and received an &a extra 5 book "
+		playerMessage="&aYou were super lucky and received an &a extra 5 book "
 		commands=[
 			"give <username> book 5"
 		]
 	}
 	10{
 		broadcast="&a<username> &6was super lucky and received an &aextra 5 ghast tear"
-		playermessage="&aYou were lucky and received an extra 5 book"
+		playerMessage="&aYou were lucky and received an extra 5 book"
 		commands=[
 			"give <username> ghast tear 5"
 		]
@@ -20,14 +20,14 @@ extraReward{
 cumulativeVoting{
 	30{
 		broadcast="&a<username> &6was vote 30 times and received an &aextra 5 book"
-		playermessage="&aYou were super lucky and received an &a extra 5 book "
+		playerMessage="&aYou were super lucky and received an &a extra 5 book "
 		commands=[
 			"give <username> book 5"
 		]
 	}
 	10{
 		broadcast="&a<username> &6was vote 10 times and received an &aextra 5 ghast tear"
-		playermessage="&aYou were lucky and received an extra 5 book"
+		playerMessage="&aYou were lucky and received an extra 5 book"
 		commands=[
 			"give <username> ghast tear 5"
 		]
@@ -38,7 +38,7 @@ cumulativeVoting{
 perms{
     "aurion.example"{
         broadcast="&a<username> &6has perms aurions.example, he received an &aextra 5 book"
-        playermessage="&aYou were lucky you have the perm aurion.example and received an extra 5 book"
+        playerMessage="&aYou were lucky you have the perm aurion.example and received an extra 5 book"
         commands=[
 			"give <username> book 5"
 		]
