--- a/sponge/src/main/resources/assets/aurionvotelistener/config.conf
+++ b/sponge/src/main/resources/assets/aurionvotelistener/config.conf
@@ -34,9 +34,9 @@ database{
 }
 
 settings {
-	permissionReward=true
-	chanceReward=true
-	cumulativeReward=true
+	permissionReward=false
+	chanceReward=false
+	cumulativeReward=false
     queueVote=true
 	# Available formatting codes for messages:
     # <service> = service name
@@ -75,7 +75,7 @@ settings {
     offline{
         enable=false
     	broadcast="&a<player> voted <amt> times while they were offline and received rewards!"
-    	playermessage="&aThanks for voting !"
+    	playerMessage="&aThanks for voting !"
     }
     # Additional formatting codes for below:
     # <TOTAL> = vote total - used for /rewards
